appId: ${APP_ID}
---
- scroll
- runFlow:
    when:
      visible: 'Books'
    commands:
      - tapOn:
          index: 0
          below: 'Books'
      - back
      - assertVisible: 'Books'
- runFlow:
    when:
      visible: 'Livres'
    commands:
      - tapOn:
          index: 0
          below: 'Livres'
      - back
      - assertVisible: 'Livres'
